colors and shit

--- a/interests.html
+++ b/interests.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -12,7 +11,7 @@
 
 	<style>
 	#interest-content {
-		padding-top: 1em;
+		padding-top: 0.5em;
 		padding-bottom: 2em;
 	}
 
@@ -24,11 +23,6 @@
 		height: auto;
 		margin: auto;
 	}
-
-	.tile-text {
-		font-size: 1.25em;
-		vertical-align: middle;
-	}
 	#other {
 		width: 100%;
 		color: #292929;
@@ -37,9 +31,6 @@
 
 
 	@media (min-width: 768px) {
-		.tile-text {
-			font-size: 1em;
-		}
 	}
 
 	</style>
@@ -49,20 +40,20 @@
 	<div class="container text-center">
 		<section id="interest-content">
 			<h2>Ignite<span> your Interests.</span></h2>
-			<p id="description">Help us learn more about the cool person that you are to get you cool opportunities.</p>
+			<p id="description">Help us learn more about the cool person that you are to get you the right opportunities.</p>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
 					<div class="row">
-						<div class="checkbox" id="tile-html">
+						<div class="checkbox seafoam-bkgrd">
 							<div class="table">
-								<h3 class="cell tile-text">html</h3>
+								<h3 class="cell">html</h3>
 							</div>
 							<input id="cb1" name="cb6" type="checkbox">
 							<label for="cb1"></label>
 						</div>
-						<div class="checkbox" id="tile-magenta">
+						<div class="checkbox blue-bkgrd">
 							<div class="table">
-								<h3 class="cell tile-text">design</h3>
+								<h3 class="cell">design</h3>
 							</div>
 							<input type="checkbox" id="cb2" name="cb2" />
 							<label for="cb2"></label>
@@ -70,17 +61,17 @@
 					</div>
 
 					<div class="row">
-						<div class="checkbox" id="tile-turquoise">
+						<div class="checkbox yellow-bkgrd">
 							<div class="table">
-								<h3 class="cell tile-text">drawing</h3>
+								<h3 class="cell">drawing</h3>
 							</div>
 								<input type="checkbox" id="cb3" name="cb3" />
 								<label for="cb3"></label>
 						</div>
 
-						<div class="checkbox" id="tile-pink">
+						<div class="checkbox orange-bkgrd">
 							<div class="table">
-								<h3 class="cell tile-text">teaching</h3>
+								<h3 class="cell">teaching</h3>
 							</div>
 							<input type="checkbox" id="cb4" name="cb4" />
 							<label for="cb4"></label>
@@ -88,17 +79,17 @@
 					</div>
 
 					<div class="row">
-						<div class="checkbox" id="tile-blue">
+						<div class="checkbox blue-bkgrd">
 							<div class="table">
-								<h3 class="cell tile-text">music</h3>
+								<h3 class="cell">music</h3>
 							</div>
 							<input type="checkbox" id="cb5" name="cb5" />
 							<label for="cb5"></label>
 						</div>
 
-						<div class="checkbox" id="tile-orange">
+						<div class="checkbox seafoam-bkgrd">
 							<div class="table">
-								<h3 class="cell tile-text">dance</h3>
+								<h3 class="cell">dance</h3>
 							</div>
 							<input type="checkbox" id="cb6" name="cb6" />
 							<label for="cb6"></label>
