--- a/listings.html
+++ b/listings.html
@@ -1,7 +1,6 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
 
@@ -14,14 +13,22 @@
 	.container {
 		padding-bottom: 4.5em;
 	}
+
+	#logo {
+		width: 6em;
+		padding: 1em 0 0.25em 0;
+	}
+
+
 	</style>
 
 </head>
 
 <body onload="setDivs()">
 	<div class="container">
-		<div class="navbar-fixed-top white-bkgrd">
-			<h4>Ascent</h4>
+		<div class="navbar-fixed-top white-bkgrd text-center">
+			<img id="logo" src="img/logo.png" alt="Ascent">
+			<!--<h4>ascent</h4>-->
 		</div>
 		<div class="gigs">
 
@@ -106,7 +113,7 @@
 					<img src="img/soundroom.jpg" style="width: 100%">
 					<div class="gig-text">
 						<h3 class="gig-title">Jazz Music Gig</h3>
-						<h5><a class="company" href="http://www.soundroom.org">The Sound Room (BAJA) </a> | Nonprofit</h5>
+						<h5><a class="company" href="http://www.soundroom.org">The Sound Room</a> | Nonprofit</h5>
 						<p>Can you play Jazz music on an instrument? We'd love to have you!</p>
 					</div>
 				</div>
