--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		font-size: 5.5em;
 	}
 	p#description {
-		font-size: 1.25em;
+		font-size: 1.5em;
 		line-height: 1.5em;
 	}
 	h2#slogan {
@@ -22,6 +22,11 @@
 		position: absolute;
 		bottom: 0;
 	}
+	#logo {
+		width: 15em;
+		position: relative;
+		left: 0.5em;
+	}
 
 	</style>
 </head>
@@ -29,12 +34,13 @@
 <body>
 	<div class="text-center table">
 		<div class="cell">
-			<div id="title-wrap">
-				<h1 id="ascent">Ascent</h1>
-				<p id="description">A hub of opportunities.</p>
-				<h2 id="slogan">We connect. You decide.</h2>
-				<br>
-			</div>
+			<br><br>
+			<img id="logo" src="img/logo-white.png" alt="Ascent"/>
+			<!--<h1 id="ascent">Ascent</h1>-->
+			<p id="description">A hub of opportunities.</p>
+			<br>
+			<h2 id="slogan">We connect. You decide.</h2>
+			<br>
 			<a class="bottom-btn" href="interests.html"><button id="enter" class="btn btn-large btn-primary">OK, let's go!</button></a>
 		</div>
 	</div>
