--- a/listings.html
+++ b/listings.html
@@ -27,8 +27,7 @@
 <body onload="setDivs()">
 	<div class="container">
 		<div class="navbar-fixed-top white-bkgrd text-center">
-			<img id="logo" src="img/logo.png" alt="Ascent">
-			<!--<h4>ascent</h4>-->
+			<img id="logo" src="img/logo-black.png" alt="Ascent">
 		</div>
 		<div class="gigs">
 
@@ -123,7 +122,7 @@
 						<p>
 							<strong>Compensation:</strong> TBD
 							<br>
-							<strong>Time:</strong> x hours
+							<strong>Time:</strong> 1-2 hours
 							<br>
 						</p>
 					</div>
