edited search page

--- a/search.html
+++ b/search.html
@@ -42,8 +42,7 @@
 <body>
 	<div class="container text-center">
 		<section id="interest-content">
-			<!--<h2>Ignite<span> your Interests.</span></h2>-->
-			<br>
+			<h2>Ignite<span> your Interests.</span></h2>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
 					<div class="row">
