--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
 	}
 	#interest-content {
 		padding-top: 0.5em;
-		padding-bottom: 2em;
+		padding-bottom: 6em;
 	}
 
 	p#description, .row {
@@ -104,6 +104,24 @@
 				</div><!--/.interest-grid-->
 			</form>
 		</section>
+
+		<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
+			<a href="listings.html" id="menu">
+				<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
+					<i class="glyphicon glyphicon-menu-hamburger"></i>
+				</button>
+			</a>
+			<a href="search.html" id="search">
+				<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
+					<i class="glyphicon glyphicon-search"></i>
+				</button>
+			</a>
+			<a href="user.html" id="profile">
+				<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+					<i class="glyphicon glyphicon-user"></i>
+				</button>
+			</a>
+		</nav>
 
 	</div><!--/.container-->
 
