--- a/listings.html
+++ b/listings.html
@@ -29,8 +29,8 @@
 		<div class="navbar-fixed-top white-bkgrd text-center">
 			<img id="logo" src="img/logo-black.png" alt="Ascent">
 		</div>
-		<div class="gigs">
 
+		<div class="page-content">
 			<div class="gig-posting">
 				<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(400);">
 					<img src="img/guitarGig.jpg" style="width: 100%">
@@ -137,25 +137,23 @@
 	</div>
 
 
-				<!-- Modal 1 -->
-			<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-				    <div class="modal-content">
-				      	<div class="modal-header">
-				        	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-				        	<h6 class="modal-title" id="myModalLabel">Modal title</h6>
-				      	</div>
-				      	<div class="modal-body">
-				        	...
-				      	</div>
-				      	<div class="modal-footer">
-				        	<button type="button" class="btn btn-primary" id="send" data-dismiss="modal">Send</button>
-				      	</div>
-				    </div>
-				</div>
-			</div>
-
-	
+	<!-- Modal 1 -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal-dialog" role="document">
+		    <div class="modal-content">
+		      	<div class="modal-header">
+		        	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        	<h6 class="modal-title" id="myModalLabel">Modal title</h6>
+		      	</div>
+		      	<div class="modal-body">
+		        	...
+		      	</div>
+		      	<div class="modal-footer">
+		        	<button type="button" class="btn btn-primary" id="send" data-dismiss="modal">Send</button>
+		      	</div>
+		    </div>
+		</div>
+	</div>
 
 	<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
 		<a href="listings.html" id="menu">
