--- a/search.html
+++ b/search.html
@@ -13,13 +13,9 @@
 	h2 {
 		margin-bottom: 1em;
 	}
-	#interest-content {
-		padding-top: 0.5em;
-		padding-bottom: 6em;
-	}
 
 	p#description, .row {
-		padding-bottom: 1em;
+		padding-bottom: 0.25em;
 	}
 
 	.interest-grid {
@@ -41,8 +37,10 @@
 
 <body>
 	<div class="container text-center">
-		<section id="interest-content">
-			<h2>Ignite<span> your Interests.</span></h2>
+		<div class="navbar-fixed-top white-bkgrd text-center">
+			<h4 class="nav-title">Interests</h4>
+		</div>
+		<section class="page-content">
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
 					<div class="row">
