--- a/search.html
+++ b/search.html
@@ -109,7 +109,7 @@
 					<i class="glyphicon glyphicon-menu-hamburger"></i>
 				</button>
 			</a>
-			<a href="search.html" id="search">
+			<a href="" id="search">
 				<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
 					<i class="glyphicon glyphicon-search"></i>
 				</button>
