--- a/listings.html
+++ b/listings.html
@@ -156,7 +156,7 @@
 	</div>
 
 	<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
-		<a href="listings.html" id="menu">
+		<a href="" id="menu">
 			<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
 				<i class="glyphicon glyphicon-menu-hamburger"></i>
 			</button>
@@ -167,7 +167,7 @@
 			</button>
 		</a>
 		<a href="user.html" id="profile">
-			<button type="button" class="nav-button btn btn-large" aria-hidden="true">
+			<button id="user" type="button" class="nav-button btn btn-large" aria-hidden="true">
 				<i class="glyphicon glyphicon-user"></i>
 			</button>
 		</a>
