--- a/user.html
+++ b/user.html
@@ -56,7 +56,7 @@
 				<i class="glyphicon glyphicon-search"></i>
 			</button>
 		</a>
-		<a href="user.html" id="profile">
+		<a href="" id="profile">
 			<button id="user" type="button" class="nav-button btn btn-large" aria-hidden="true">
 				<i class="glyphicon glyphicon-user"></i>
 			</button>
