landing page background

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/custom.css">
 
 	<style>
-	h1#ascent {
-		font-size: 5.5em;
+	#background {
+		background: url(img/background.jpg) no-repeat fixed center center;
+		background-size: 100% 100%;
+		-webkit-background-size: 100% 100%;
+		-moz-background-size: 100% 100%;
 	}
 	p#description {
 		font-size: 1.5em;
@@ -32,11 +34,10 @@
 </head>
 
 <body>
-	<div class="text-center table">
+	<div id="background" class="text-center table">
 		<div class="cell">
 			<br><br>
 			<img id="logo" src="img/logo-white.png" alt="Ascent"/>
-			<!--<h1 id="ascent">Ascent</h1>-->
 			<p id="description">A hub of opportunities.</p>
 			<br>
 			<h2 id="slogan">We connect. You decide.</h2>
