--- a/interests.html
+++ b/interests.html
@@ -37,7 +37,7 @@
 </head>
 
 <body>
-	<div class="container text-center">
+	<div class="container text-center" id="background">
 		<section id="interest-content">
 			<h2>Ignite<span> your Interests.</span></h2>
 			<p id="description">Help us learn more about the cool person that you are to get you the right opportunities.</p>
