profile page, button changes, etc

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 		line-height: 1.5em;
 	}
 	h2#slogan {
-		font-size: 1.5em;
+		font-size: 1.15em;
 		line-height: 1.75em;
+		margin-top: -5px;
 	}
 	a.bottom-btn {
 		position: absolute;
 		bottom: 0;
 	}
 	#logo {
-		width: 15em;
+		width: 22em;
 		position: relative;
 		left: 0.5em;
 	}
@@ -30,11 +31,8 @@
 <body>
 	<div id="background" class="text-center table">
 		<div class="cell">
-			<br><br>
 			<img id="logo" src="img/logo-white.png" alt="Ascent"/>
-			<p id="description">A hub of opportunities.</p>
-			<br>
-			<h2 id="slogan">We connect. You decide.</h2>
+			<h2 id="slogan">Let your interests pay off</h2>
 			<br>
 			<a class="bottom-btn" href="interests.html"><button id="enter" class="btn btn-large btn-primary">OK, let's go!</button></a>
 		</div>
