--- a/interests.html
+++ b/interests.html
@@ -37,10 +37,10 @@
 </head>
 
 <body>
-	<div class="container text-center" id="background">
+	<div class="container text-center">
 		<section id="interest-content">
 			<h2>Ignite<span> your Interests.</span></h2>
-			<p id="description">Help us learn more about the cool person that you are to get you the right opportunities.</p>
+			<p id="description">Tell us more about yourself so that we can connect you to the right opportunities.</p>
 			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
 				<div class="interest-grid">
 					<div class="row">
