--- a/listings.html
+++ b/listings.html
@@ -19,7 +19,11 @@
 		padding: 1em 0 0.25em 0;
 	}
 
-
+	#contact-form {
+		width: 100%;
+		color: #292929;
+		font-size: 1em;
+	}
 	</style>
 
 </head>
@@ -50,7 +54,7 @@
 						</p>
 					</div>
 					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Interested</button>
+						<button class="btn btn-primary interested">Save for Later</button>
 						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
 					</div>
 				</div>
@@ -75,7 +79,7 @@
 						</p>
 					</div>
 					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Interested</button>
+						<button class="btn btn-primary interested">Save for Later</button>
 						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
 					</div>
 				</div>
@@ -101,7 +105,7 @@
 						</p>
 					</div>
 					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Interested</button>
+						<button class="btn btn-primary interested">Save for Later</button>
 						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
 					</div>
 				</div>
@@ -127,7 +131,33 @@
 						</p>
 					</div>
 					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Interested</button>
+						<button class="btn btn-primary interested">Save for Later</button>
+						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+					</div>
+				</div>
+			</div><!--/.gig-posting-->
+
+
+						<div class="gig-posting">
+				<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(300);">
+					<img src="img/piano.png" style="width: 100%">
+					<div class="gig-text">
+						<h3 class="gig-title">Piano Teaching Gig</h3>
+						<h5><a class="company" href="">Radiant Creations</a> | Flower Shop</h5>
+						<p>Have piano skills? We would love to learn an easy-leveled song to entertain customers while in the shop.</p>
+					</div>
+				</div>
+				<div id="content-5" class="purple-bkgrd">
+					<div class="gig-text">
+						<p>
+							<strong>Compensation:</strong> TBD
+							<br>
+							<strong>Time:</strong> 1-2 hours
+							<br>
+						</p>
+					</div>
+					<div class="button-wrapper text-center">
+						<button class="btn btn-primary interested">Save for Later</button>
 						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
 					</div>
 				</div>
@@ -143,10 +173,13 @@
 		    <div class="modal-content">
 		      	<div class="modal-header">
 		        	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        	<h6 class="modal-title" id="myModalLabel">Modal title</h6>
+		        	<h6 class="modal-title" id="myModalLabel">Contact Gig</h6>
 		      	</div>
 		      	<div class="modal-body">
-		        	...
+		        	       <form class="contact" name="contact">
+            <label class="label" for="message" style="color:#5d5d5d">Enter a Message</label><br>
+            <textarea id="contact-form" name="message" class="input-xlarge"></textarea>
+        </form>
 		      	</div>
 		      	<div class="modal-footer">
 		        	<button type="button" class="btn btn-primary" id="send" data-dismiss="modal">Send</button>
