added background to index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-	<div id="background" class="text-center table">
+	<div class="text-center table" id="background">
 		<div class="cell">
 			<img id="logo" src="img/logo-white.png" alt="Ascent"/>
 			<h2 id="slogan">Let your interests pay off</h2>
