--- a/listings.html
+++ b/listings.html
@@ -29,182 +29,184 @@
 </head>
 
 <body onload="setDivs()">
-	<div class="container">
-		<div class="navbar-fixed-top white-bkgrd text-center">
-			<img id="logo" src="img/logo-black.png" alt="Ascent">
-		</div>
-
-		<div class="page-content">
-			<div class="gig-posting">
-				<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(400);">
-					<img src="img/guitarGig.jpg" style="width: 100%">
-					<div class="gig-text">
-						<h3 class="gig-title">Music Gig</h3>
-						<h5><a class="company" href="http://www.thegrovesf.com/">The Grove</a> | Coffee Shop</h5>
-						<p>Play music? Keep our cafe lively with some background jams. Coffee and meal on us!</p>
-					</div>
-				</div>
-				<div id="content-2" class="blue-bkgrd">
-					<div class="gig-text">
-						<p>
-							<strong>Compensation:</strong> TBD
-							<br>
-							<strong>Time:</strong> 1-2 hours
-							<br>
-						</p>
-					</div>
-					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Save for Later</button>
-						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
-					</div>
-				</div>
+	<div id="background">
+		<div class="container">
+			<div class="navbar-fixed-top white-bkgrd text-center">
+				<img id="logo" src="img/logo-black.png" alt="Ascent">
 			</div>
 
-			<div class="gig-posting">
-				<div class="yellow-bkgrd pointer" onclick="$('#content-1').toggle(300);">
-					<img src="img/hands-laptop.jpg" style="width: 100%">
-					<div class="gig-text">
-						<h3 class="gig-title">Design a Website</h3>
-						<h5><a class="company" href="https://www.dance4life.com">dance4life</a> | Nonprofit</h5>
-						<p>We're looking for an eager individual to help us create an online site.</p>
+			<div class="page-content">
+				<div class="gig-posting">
+					<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(400);">
+						<img src="img/guitarGig.jpg" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Music Gig</h3>
+							<h5><a class="company" href="http://www.thegrovesf.com/">The Grove</a> | Coffee Shop</h5>
+							<p>Play music? Keep our cafe lively with some background jams. Coffee and meal on us!</p>
+						</div>
+					</div>
+					<div id="content-2" class="blue-bkgrd">
+						<div class="gig-text">
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 1-2 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
 					</div>
 				</div>
-				<div id="content-1" class="yellow-bkgrd">
-					<div class="gig-text">
-						<p>
-							<strong>Compensation:</strong> TBD
-							<br>
-							<strong>Time:</strong> 20 hours
-							<br>
-						</p>
+
+				<div class="gig-posting">
+					<div class="yellow-bkgrd pointer" onclick="$('#content-1').toggle(300);">
+						<img src="img/hands-laptop.jpg" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Design a Website</h3>
+							<h5><a class="company" href="https://www.dance4life.com">dance4life</a> | Nonprofit</h5>
+							<p>We're looking for an eager individual to help us create an online site.</p>
+						</div>
 					</div>
-					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Save for Later</button>
-						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+					<div id="content-1" class="yellow-bkgrd">
+						<div class="gig-text">
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 20 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
 					</div>
-				</div>
-			</div><!--/.gig-posting-->
+				</div><!--/.gig-posting-->
 
 
-			<div class="gig-posting">
-				<div class="seafoam-bkgrd pointer" onclick="$('#content-3').toggle(300);">
-					<img src="img/flyers.jpg" style="width: 100%">
-					<div class="gig-text">
-						<h3 class="gig-title">Create a Flyer</h3>
-						<h5><a class="company" href="">company</a> | type</h5>
-						<p>Can you draw? Design? Use canva.com? Come help us create a flyer for a bake sale!</p>
+				<div class="gig-posting">
+					<div class="seafoam-bkgrd pointer" onclick="$('#content-3').toggle(300);">
+						<img src="img/flyers.jpg" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Create a Flyer</h3>
+							<h5><a class="company" href="">company</a> | type</h5>
+							<p>Can you draw? Design? Use canva.com? Come help us create a flyer for a bake sale!</p>
+						</div>
 					</div>
-				</div>
-				<div id="content-3" class="seafoam-bkgrd">
-					<div class="gig-text">
-						<p>
-							<strong>Compensation:</strong> TBD
-							<br>
-							<strong>Time:</strong> 2 hours
-							<br>
-						</p>
+					<div id="content-3" class="seafoam-bkgrd">
+						<div class="gig-text">
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 2 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
 					</div>
-					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Save for Later</button>
-						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
-					</div>
-				</div>
-			</div><!--/.gig-posting-->
+				</div><!--/.gig-posting-->
 
-			<div class="gig-posting">
-				<div class="orange-bkgrd pointer" onclick="$('#content-4').toggle(300);">
-					<img src="img/soundroom.jpg" style="width: 100%">
-					<div class="gig-text">
-						<h3 class="gig-title">Jazz Music Gig</h3>
-						<h5><a class="company" href="http://www.soundroom.org">The Sound Room</a> | Nonprofit</h5>
-						<p>Can you play Jazz music on an instrument? We'd love to have you!</p>
+				<div class="gig-posting">
+					<div class="orange-bkgrd pointer" onclick="$('#content-4').toggle(300);">
+						<img src="img/soundroom.jpg" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Jazz Music Gig</h3>
+							<h5><a class="company" href="http://www.soundroom.org">The Sound Room</a> | Nonprofit</h5>
+							<p>Can you play Jazz music on an instrument? We'd love to have you!</p>
+						</div>
 					</div>
-				</div>
-				<div id="content-4" class="orange-bkgrd">
-					<div class="gig-text">
-						<p>Bay Area Jazz and Arts nurtures music, art, and creative ventures through live performance and educational programs.</p>
-						<p>
-							<strong>Compensation:</strong> TBD
-							<br>
-							<strong>Time:</strong> 1-2 hours
-							<br>
-						</p>
+					<div id="content-4" class="orange-bkgrd">
+						<div class="gig-text">
+							<p>Bay Area Jazz and Arts nurtures music, art, and creative ventures through live performance and educational programs.</p>
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 1-2 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
 					</div>
-					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Save for Later</button>
-						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
-					</div>
-				</div>
-			</div><!--/.gig-posting-->
+				</div><!--/.gig-posting-->
 
 
-						<div class="gig-posting">
-				<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(300);">
-					<img src="img/piano.png" style="width: 100%">
-					<div class="gig-text">
-						<h3 class="gig-title">Piano Teaching Gig</h3>
-						<h5><a class="company" href="">Radiant Creations</a> | Flower Shop</h5>
-						<p>Have piano skills? We would love to learn an easy-leveled song to entertain customers while in the shop.</p>
+							<div class="gig-posting">
+					<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(300);">
+						<img src="img/piano.png" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Piano Teaching Gig</h3>
+							<h5><a class="company" href="">Radiant Creations</a> | Flower Shop</h5>
+							<p>Have piano skills? We would love to learn an easy-leveled song to entertain customers while in the shop.</p>
+						</div>
 					</div>
-				</div>
-				<div id="content-5" class="purple-bkgrd">
-					<div class="gig-text">
-						<p>
-							<strong>Compensation:</strong> TBD
-							<br>
-							<strong>Time:</strong> 1-2 hours
-							<br>
-						</p>
+					<div id="content-5" class="purple-bkgrd">
+						<div class="gig-text">
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 1-2 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
 					</div>
-					<div class="button-wrapper text-center">
-						<button class="btn btn-primary interested">Save for Later</button>
-						<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
-					</div>
-				</div>
-			</div><!--/.gig-posting-->
+				</div><!--/.gig-posting-->
 
+			</div>
 		</div>
-	</div>
 
 
-	<!-- Modal 1 -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		<div class="modal-dialog" role="document">
-		    <div class="modal-content">
-		      	<div class="modal-header">
-		        	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        	<h6 class="modal-title" id="myModalLabel">Contact Gig</h6>
-		      	</div>
-		      	<div class="modal-body">
-		        	       <form class="contact" name="contact">
-            <label class="label" for="message" style="color:#5d5d5d">Enter a Message</label><br>
-            <textarea id="contact-form" name="message" class="input-xlarge"></textarea>
-        </form>
-		      	</div>
-		      	<div class="modal-footer">
-		        	<button type="button" class="btn btn-primary" id="send" data-dismiss="modal">Send</button>
-		      	</div>
-		    </div>
+		<!-- Modal 1 -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+			<div class="modal-dialog" role="document">
+			    <div class="modal-content">
+			      	<div class="modal-header">
+			        	<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+			        	<h6 class="modal-title" id="myModalLabel">Contact Gig</h6>
+			      	</div>
+			      	<div class="modal-body">
+			        	       <form class="contact" name="contact">
+	            <label class="label" for="message" style="color:#5d5d5d">Enter a Message</label><br>
+	            <textarea id="contact-form" name="message" class="input-xlarge"></textarea>
+	        </form>
+			      	</div>
+			      	<div class="modal-footer">
+			        	<button type="button" class="btn btn-primary" id="send" data-dismiss="modal">Send</button>
+			      	</div>
+			    </div>
+			</div>
 		</div>
-	</div>
 
-	<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
-		<a href="" id="menu">
-			<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
-				<i class="glyphicon glyphicon-menu-hamburger"></i>
-			</button>
-		</a>
-		<a href="search.html" id="search">
-			<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
-				<i class="glyphicon glyphicon-search"></i>
-			</button>
-		</a>
-		<a href="user.html" id="profile">
-			<button id="user" type="button" class="nav-button btn btn-large" aria-hidden="true">
-				<i class="glyphicon glyphicon-user"></i>
-			</button>
-		</a>
-	</nav>
+		<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
+			<a href="" id="menu">
+				<button id="home" type="button" class="nav-button btn btn-large" aria-hidden="true">
+					<i class="glyphicon glyphicon-menu-hamburger"></i>
+				</button>
+			</a>
+			<a href="search.html" id="search">
+				<button id="explore" type="button" class="nav-button btn btn-large" aria-hidden="true">
+					<i class="glyphicon glyphicon-search"></i>
+				</button>
+			</a>
+			<a href="user.html" id="profile">
+				<button id="user" type="button" class="nav-button btn btn-large" aria-hidden="true">
+					<i class="glyphicon glyphicon-user"></i>
+				</button>
+			</a>
+		</nav>
+	</div>
 
 
 	<script language="javascript" type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
