--- a/search.html
+++ b/search.html
@@ -36,72 +36,74 @@
 </head>
 
 <body>
-	<div class="container text-center">
-		<div class="navbar-fixed-top white-bkgrd text-center">
-			<h4 class="nav-title">Interests</h4>
+	<div id="background">
+		<div class="container text-center">
+			<div class="navbar-fixed-top white-bkgrd text-center">
+				<h4 class="nav-title">Interests</h4>
+			</div>
+			<section class="page-content">
+				<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
+					<div class="interest-grid">
+						<div class="row">
+							<div class="checkbox seafoam-bkgrd">
+								<div class="table">
+									<h3 class="cell">html</h3>
+								</div>
+								<input id="cb1" name="cb6" type="checkbox">
+								<label for="cb1"></label>
+							</div>
+							<div class="checkbox blue-bkgrd">
+								<div class="table">
+									<h3 class="cell">design</h3>
+								</div>
+								<input type="checkbox" id="cb2" name="cb2" />
+								<label for="cb2"></label>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="checkbox yellow-bkgrd">
+								<div class="table">
+									<h3 class="cell">drawing</h3>
+								</div>
+									<input type="checkbox" id="cb3" name="cb3" />
+									<label for="cb3"></label>
+							</div>
+
+							<div class="checkbox orange-bkgrd">
+								<div class="table">
+									<h3 class="cell">teaching</h3>
+								</div>
+								<input type="checkbox" id="cb4" name="cb4" />
+								<label for="cb4"></label>
+							</div>
+						</div>
+
+						<div class="row">
+							<div class="checkbox blue-bkgrd">
+								<div class="table">
+									<h3 class="cell">music</h3>
+								</div>
+								<input type="checkbox" id="cb5" name="cb5" />
+								<label for="cb5"></label>
+							</div>
+
+							<div class="checkbox seafoam-bkgrd">
+								<div class="table">
+									<h3 class="cell">dance</h3>
+								</div>
+								<input type="checkbox" id="cb6" name="cb6" />
+								<label for="cb6"></label>
+							</div>
+						</div>
+
+
+						<p>Interests not listed? Let us know!</p>
+						<input id="other" type="text" placeholder="Separate multiple with commas">
+					</div><!--/.interest-grid-->
+				</form>
+			</section>
 		</div>
-		<section class="page-content">
-			<form class="ac-custom ac-checkbox ac-checkmark" autocomplete="off">
-				<div class="interest-grid">
-					<div class="row">
-						<div class="checkbox seafoam-bkgrd">
-							<div class="table">
-								<h3 class="cell">html</h3>
-							</div>
-							<input id="cb1" name="cb6" type="checkbox">
-							<label for="cb1"></label>
-						</div>
-						<div class="checkbox blue-bkgrd">
-							<div class="table">
-								<h3 class="cell">design</h3>
-							</div>
-							<input type="checkbox" id="cb2" name="cb2" />
-							<label for="cb2"></label>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="checkbox yellow-bkgrd">
-							<div class="table">
-								<h3 class="cell">drawing</h3>
-							</div>
-								<input type="checkbox" id="cb3" name="cb3" />
-								<label for="cb3"></label>
-						</div>
-
-						<div class="checkbox orange-bkgrd">
-							<div class="table">
-								<h3 class="cell">teaching</h3>
-							</div>
-							<input type="checkbox" id="cb4" name="cb4" />
-							<label for="cb4"></label>
-						</div>
-					</div>
-
-					<div class="row">
-						<div class="checkbox blue-bkgrd">
-							<div class="table">
-								<h3 class="cell">music</h3>
-							</div>
-							<input type="checkbox" id="cb5" name="cb5" />
-							<label for="cb5"></label>
-						</div>
-
-						<div class="checkbox seafoam-bkgrd">
-							<div class="table">
-								<h3 class="cell">dance</h3>
-							</div>
-							<input type="checkbox" id="cb6" name="cb6" />
-							<label for="cb6"></label>
-						</div>
-					</div>
-
-
-					<p>Interests not listed? Let us know!</p>
-					<input id="other" type="text" placeholder="Separate multiple with commas">
-				</div><!--/.interest-grid-->
-			</form>
-		</section>
 
 		<nav class="navbar-fixed-bottom white-bkgrd" role="navigation">
 			<a href="listings.html" id="menu">
@@ -120,8 +122,7 @@
 				</button>
 			</a>
 		</nav>
-
-	</div><!--/.container-->
+	</div>
 
 	<script src="js/svgcheckbx.js"></script>
 
