--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
 		position: relative;
 		left: 0.5em;
 	}
+	.cell {
+		opacity: 0.85;
+		filter: alpha(opacity=85);
+	}
+	.bottom-btn button {
+		opacity: 0.8;
+		filter: alpha(opacity=80);
+	}
 
 	</style>
 </head>
