edited tile transparency

--- a/index.html
+++ b/index.html
@@ -24,21 +24,13 @@
 		position: relative;
 		left: 0.5em;
 	}
-	.cell {
-		opacity: 0.85;
-		filter: alpha(opacity=85);
-	}
-	.bottom-btn button {
-		opacity: 0.8;
-		filter: alpha(opacity=80);
-	}
 
 	</style>
 </head>
 
 <body>
 	<div class="text-center table" id="background">
-		<div class="cell">
+		<div class="cell transparent">
 			<img id="logo" src="img/logo-white.png" alt="Ascent"/>
 			<h2 id="slogan">Let your interests pay off</h2>
 			<br>
