--- a/listings.html
+++ b/listings.html
@@ -30,7 +30,7 @@
 
 <body onload="setDivs()">
 	<div id="background">
-		<div class="container">
+		<div class="container transparent">
 			<div class="navbar-fixed-top white-bkgrd text-center">
 				<img id="logo" src="img/logo-black.png" alt="Ascent">
 			</div>
