--- a/listings.html
+++ b/listings.html
@@ -37,12 +37,12 @@
 
 			<div class="page-content">
 				<div class="gig-posting">
-					<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(400);">
+					<div class="blue-bkgrd pointer" onclick="$('#content-2').toggle(200);">
 						<img src="img/guitarGig.jpg" style="width: 100%">
 						<div class="gig-text">
-							<h3 class="gig-title">Music Gig</h3>
+							<h3 class="gig-title">Make Music</h3>
 							<h5><a class="company" href="http://www.thegrovesf.com/">The Grove</a> | Coffee Shop</h5>
-							<p>Play music? Keep our cafe lively with some background jams. Coffee and meal on us!</p>
+							<p>Play music or sing? Keep our cafe lively with some background jams. Coffee and meal on us!</p>
 						</div>
 					</div>
 					<div id="content-2" class="blue-bkgrd">
@@ -62,7 +62,7 @@
 				</div>
 
 				<div class="gig-posting">
-					<div class="yellow-bkgrd pointer" onclick="$('#content-1').toggle(300);">
+					<div class="yellow-bkgrd pointer" onclick="$('#content-1').toggle(200);">
 						<img src="img/hands-laptop.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Design a Website</h3>
@@ -86,9 +86,35 @@
 					</div>
 				</div><!--/.gig-posting-->
 
+				<div class="gig-posting">
+					<div class="orange-bkgrd pointer" onclick="$('#content-4').toggle(200);">
+						<img src="img/soundroom.jpg" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Play Jazz Music</h3>
+							<h5><a class="company" href="http://www.soundroom.org">The Sound Room</a> | Nonprofit</h5>
+							<p>Can you play Jazz music on an instrument? We'd love to have you!</p>
+						</div>
+					</div>
+					<div id="content-4" class="orange-bkgrd">
+						<div class="gig-text">
+							<p>Bay Area Jazz and Arts nurtures music, art, and creative ventures through live performance and educational programs.</p>
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 1-2 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
+					</div>
+				</div><!--/.gig-posting-->
+
 
 				<div class="gig-posting">
-					<div class="seafoam-bkgrd pointer" onclick="$('#content-3').toggle(300);">
+					<div class="seafoam-bkgrd pointer" onclick="$('#content-3').toggle(200);">
 						<img src="img/flyers.jpg" style="width: 100%">
 						<div class="gig-text">
 							<h3 class="gig-title">Create a Flyer</h3>
@@ -112,38 +138,12 @@
 					</div>
 				</div><!--/.gig-posting-->
 
+
 				<div class="gig-posting">
-					<div class="orange-bkgrd pointer" onclick="$('#content-4').toggle(300);">
-						<img src="img/soundroom.jpg" style="width: 100%">
-						<div class="gig-text">
-							<h3 class="gig-title">Jazz Music Gig</h3>
-							<h5><a class="company" href="http://www.soundroom.org">The Sound Room</a> | Nonprofit</h5>
-							<p>Can you play Jazz music on an instrument? We'd love to have you!</p>
-						</div>
-					</div>
-					<div id="content-4" class="orange-bkgrd">
-						<div class="gig-text">
-							<p>Bay Area Jazz and Arts nurtures music, art, and creative ventures through live performance and educational programs.</p>
-							<p>
-								<strong>Compensation:</strong> TBD
-								<br>
-								<strong>Time:</strong> 1-2 hours
-								<br>
-							</p>
-						</div>
-						<div class="button-wrapper text-center">
-							<button class="btn btn-primary interested">Save for Later</button>
-							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
-						</div>
-					</div>
-				</div><!--/.gig-posting-->
-
-
-							<div class="gig-posting">
-					<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(300);">
+					<div class="purple-bkgrd pointer" onclick="$('#content-5').toggle(200);">
 						<img src="img/piano.png" style="width: 100%">
 						<div class="gig-text">
-							<h3 class="gig-title">Piano Teaching Gig</h3>
+							<h3 class="gig-title">Teach Piano</h3>
 							<h5><a class="company" href="">Radiant Creations</a> | Flower Shop</h5>
 							<p>Have piano skills? We would love to learn an easy-leveled song to entertain customers while in the shop.</p>
 						</div>
@@ -163,6 +163,33 @@
 						</div>
 					</div>
 				</div><!--/.gig-posting-->
+
+
+				<div class="gig-posting">
+					<div class="blue-bkgrd pointer" onclick="$('#content-6').toggle(200);">
+						<img src="img/friendly-greeter.jpg" style="width: 100%">
+						<div class="gig-text">
+							<h3 class="gig-title">Welcome Guests</h3>
+							<h5><a class="company" href="">EndGames Improv</a> | Comedy Club</h5>
+							<p>Get paid for saying hi to people at Comedy Night!</p>
+						</div>
+					</div>
+					<div id="content-6" class="blue-bkgrd">
+						<div class="gig-text">
+							<p>We're looking for someone with great people skills to welcome guests into our quaint venue and hand out program flyers.</p>
+							<p>
+								<strong>Compensation:</strong> TBD
+								<br>
+								<strong>Time:</strong> 1-2 hours
+								<br>
+							</p>
+						</div>
+						<div class="button-wrapper text-center">
+							<button class="btn btn-primary interested">Save for Later</button>
+							<button class="btn btn-primary action" data-toggle="modal" data-target="#myModal">Contact Now</button>
+						</div>
+					</div>
+				</div>
 
 			</div>
 		</div>
